exports[`test Change filter 1`] = `
<div>
  <div>
    <header>
      <div
        className="container">
        <div
          className="row d-flex align-items-center">
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-center">
            <a
              href="/#">
              <i
                className="home-button fa fa-home" />
            </a>
          </div>
          <div
            className="col-xs-12 col-sm-10 d-flex justify-content-around">
            <h1
              className="dashboard-title">
              Testproduct 30X 1W1-PSB
            </h1>
          </div>
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-around">
            <div
              className="status-point d-flex align-items-center error">
              <svg
                className="status-point"
                viewBox="0 0 42 42">
                <circle
                  className="status-point-shadow"
                  cx="21"
                  cy="21"
                  r="21" />
                <circle
                  className="status-point"
                  cx="20"
                  cy="20"
                  r="20" />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      className="detail-area container">
      <div
        className="row detail-row">
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <div
              className="row">
              <h2
                className="col area-title">
                Produkt Details
              </h2>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Marke:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Produktfamilie:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Seriennummer:
              </p>
              <p
                className="col">
                0
              </p>
            </div>
          </div>
        </div>
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <h2
              className="area-title">
              Statusherleitung
            </h2>
            <div
              className="row">
              <p
                className="col-4">
                Status:
              </p>
              <p
                className="col">
                ERROR
              </p>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Statusbeschreibung:
              </p>
              <p
                className="col">
                Error detected! Intervention required!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="line-chart container">
      <canvas
        height="80"
        id="lineChart" />
    </div>
    <div
      className="filter-bar container">
      <div
        className="form-group row">
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
      </div>
    </div>
    <div
      className="tab-bar container">
      <ul
        className="nav nav-tabs border-0"
        role="tablist">
        <li
          className="tab nav-item">
          <a
            className="nav-link"
            data-toggle="tab"
            href="#Error Events"
            onClick={[Function]}
            role="tab">
            Error Events
          </a>
        </li>
      </ul>
    </div>
    <div
      className="container event-table-container">
      <table
        className="table">
        <thead
          className="event-table-header thead">
          <tr>
            <th>
              #
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;

exports[`test Changing active Tab 1`] = `
<div>
  <div>
    <header>
      <div
        className="container">
        <div
          className="row d-flex align-items-center">
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-center">
            <a
              href="/#">
              <i
                className="home-button fa fa-home" />
            </a>
          </div>
          <div
            className="col-xs-12 col-sm-10 d-flex justify-content-around">
            <h1
              className="dashboard-title">
              Testproduct 30X 1W1-PSB
            </h1>
          </div>
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-around">
            <div
              className="status-point d-flex align-items-center error">
              <svg
                className="status-point"
                viewBox="0 0 42 42">
                <circle
                  className="status-point-shadow"
                  cx="21"
                  cy="21"
                  r="21" />
                <circle
                  className="status-point"
                  cx="20"
                  cy="20"
                  r="20" />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      className="detail-area container">
      <div
        className="row detail-row">
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <div
              className="row">
              <h2
                className="col area-title">
                Produkt Details
              </h2>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Marke:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Produktfamilie:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Seriennummer:
              </p>
              <p
                className="col">
                0
              </p>
            </div>
          </div>
        </div>
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <h2
              className="area-title">
              Statusherleitung
            </h2>
            <div
              className="row">
              <p
                className="col-4">
                Status:
              </p>
              <p
                className="col">
                ERROR
              </p>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Statusbeschreibung:
              </p>
              <p
                className="col">
                Error detected! Intervention required!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="line-chart container">
      <canvas
        height="80"
        id="lineChart" />
    </div>
    <div
      className="filter-bar container">
      <div
        className="form-group row">
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
      </div>
    </div>
    <div
      className="tab-bar container">
      <ul
        className="nav nav-tabs border-0"
        role="tablist">
        <li
          className="tab nav-item">
          <a
            className="nav-link"
            data-toggle="tab"
            href="#Error Events"
            onClick={[Function]}
            role="tab">
            Error Events
          </a>
        </li>
      </ul>
    </div>
    <div
      className="container event-table-container">
      <table
        className="table">
        <thead
          className="event-table-header thead">
          <tr>
            <th>
              #
            </th>
            <th>
              ErrorCode
            </th>
            <th>
              ErrorDescription
            </th>
            <th>
              PossibleFix
            </th>
            <th>
              DeviceID
            </th>
            <th>
              DeviceLocation
            </th>
            <th>
              SoftwareVersion
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row">
              0
            </th>
            <td>
              404
            </td>
            <td>
              Product not found.
            </td>
            <td>
              Search for it.
            </td>
            <td>
              666
            </td>
            <td>
              Not known.
            </td>
            <td>
              0.0.4.alpha
            </td>
          </tr>
          <tr>
            <th
              scope="row">
              1
            </th>
            <td>
              123
            </td>
            <td>
              Product not found.
            </td>
            <td>
              Search for it.
            </td>
            <td>
              444
            </td>
            <td>
              Hamburg
            </td>
            <td>
              0.0.7
            </td>
          </tr>
          <tr>
            <th
              scope="row">
              2
            </th>
            <td>
              987
            </td>
            <td>
              Product not found.
            </td>
            <td>
              Replace machine
            </td>
            <td>
              333
            </td>
            <td>
              Berlin
            </td>
            <td>
              0.1.0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`test Handle error response 1`] = `
<div>
  <div
    className="critical-error">
    <i
      className="fa fa-exclamation-triangle warning-sign" />
    <p>
      404
    </p>
  </div>
</div>
`;

exports[`test Rendering of ProductView 1`] = `
<div>
  <div>
    <header>
      <div
        className="container">
        <div
          className="row d-flex align-items-center">
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-center">
            <a
              href="/#">
              <i
                className="home-button fa fa-home" />
            </a>
          </div>
          <div
            className="col-xs-12 col-sm-10 d-flex justify-content-around">
            <h1
              className="dashboard-title">
              Testproduct 30X 1W1-PSB
            </h1>
          </div>
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-around">
            <div
              className="status-point d-flex align-items-center error">
              <svg
                className="status-point"
                viewBox="0 0 42 42">
                <circle
                  className="status-point-shadow"
                  cx="21"
                  cy="21"
                  r="21" />
                <circle
                  className="status-point"
                  cx="20"
                  cy="20"
                  r="20" />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      className="detail-area container">
      <div
        className="row detail-row">
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <div
              className="row">
              <h2
                className="col area-title">
                Produkt Details
              </h2>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Marke:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Produktfamilie:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Seriennummer:
              </p>
              <p
                className="col">
                0
              </p>
            </div>
          </div>
        </div>
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <h2
              className="area-title">
              Statusherleitung
            </h2>
            <div
              className="row">
              <p
                className="col-4">
                Status:
              </p>
              <p
                className="col">
                ERROR
              </p>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Statusbeschreibung:
              </p>
              <p
                className="col">
                Error detected! Intervention required!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="line-chart container">
      <canvas
        height="80"
        id="lineChart" />
    </div>
    <div
      className="filter-bar container">
      <div
        className="form-group row">
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
      </div>
    </div>
    <div
      className="tab-bar container">
      <ul
        className="nav nav-tabs border-0"
        role="tablist">
        <li
          className="tab nav-item">
          <a
            className="nav-link"
            data-toggle="tab"
            href="#Error Events"
            onClick={[Function]}
            role="tab">
            Error Events
          </a>
        </li>
      </ul>
    </div>
    <div
      className="container event-table-container">
      <table
        className="table">
        <thead
          className="event-table-header thead">
          <tr>
            <th>
              #
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;

exports[`test Successful filtering 1`] = `
<div>
  <div>
    <header>
      <div
        className="container">
        <div
          className="row d-flex align-items-center">
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-center">
            <a
              href="/#">
              <i
                className="home-button fa fa-home" />
            </a>
          </div>
          <div
            className="col-xs-12 col-sm-10 d-flex justify-content-around">
            <h1
              className="dashboard-title">
              Testproduct 30X 1W1-PSB
            </h1>
          </div>
          <div
            className="hidden-xs-down col-sm-1 d-flex justify-content-around">
            <div
              className="status-point d-flex align-items-center error">
              <svg
                className="status-point"
                viewBox="0 0 42 42">
                <circle
                  className="status-point-shadow"
                  cx="21"
                  cy="21"
                  r="21" />
                <circle
                  className="status-point"
                  cx="20"
                  cy="20"
                  r="20" />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      className="detail-area container">
      <div
        className="row detail-row">
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <div
              className="row">
              <h2
                className="col area-title">
                Produkt Details
              </h2>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Marke:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Produktfamilie:
              </p>
              <p
                className="col" />
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Seriennummer:
              </p>
              <p
                className="col">
                0
              </p>
            </div>
          </div>
        </div>
        <div
          className="detail-area-block col-xs-12 col-sm-6">
          <div>
            <h2
              className="area-title">
              Statusherleitung
            </h2>
            <div
              className="row">
              <p
                className="col-4">
                Status:
              </p>
              <p
                className="col">
                ERROR
              </p>
            </div>
            <div
              className="row">
              <p
                className="col-4">
                Statusbeschreibung:
              </p>
              <p
                className="col">
                Error detected! Intervention required!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="line-chart container">
      <canvas
        height="80"
        id="lineChart" />
    </div>
    <div
      className="filter-bar container">
      <div
        className="form-group row">
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
        <div
          className="filter input-group col-xs-12 col-sm-4 col-lg-3">
          <span
            className="input-group-addon"
            id="search-addon">
            <i
              className="fa fa-search" />
          </span>
          <input
            className="form-control"
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value={undefined} />
        </div>
      </div>
    </div>
    <div
      className="tab-bar container">
      <ul
        className="nav nav-tabs border-0"
        role="tablist">
        <li
          className="tab nav-item">
          <a
            className="nav-link"
            data-toggle="tab"
            href="#Error Events"
            onClick={[Function]}
            role="tab">
            Error Events
          </a>
        </li>
      </ul>
    </div>
    <div
      className="container event-table-container">
      <table
        className="table">
        <thead
          className="event-table-header thead">
          <tr>
            <th>
              #
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;
